--- a/04-local-server/exercise/src/index.html
+++ b/04-local-server/exercise/src/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    Soon to be a Three.js experience
+    <canvas class="my-webgl-canvas"></canvas>
     <script type="module" src="./script.js"></script>
+    <div id="app"></div>
 </body>
 </html>
